tooling/base/dagger-engine/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: dagger-engine
spec:
  description: "Allow internal traffic to the Dagger Engine service."
  endpointSelector:
    matchLabels:
      k8s:actions.github.com/scale-set-name: dagger-engine
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:actions.github.com/scale-set-name: default-gha-runner-scale-set
    - fromEndpoints:
        - matchLabels:
            k8s:actions.github.com/scale-set-name: dagger-gha-runner-scale-set
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
